--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
 	.param label {
 		display: block;
 		float: left;
-		width: 180px;
+		width: 140px;
 		height: 29px;
 		line-height: 29px;
+
+		font-size: 12px;
 	}
 	.param input {
 		float: left;
